bpo-40527: Fix command line argument parsing (GH-19955) (cherry picked from commit 2668a9a5aa506a048aef7b4881c8dcf6b81c6870)

Co-authored-by: Victor Stinner <vstinner@python.org>